--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,14 +1,13 @@
 ---
 driver_plugin: vagrant
+driver_config:
+  require_chef_omnibus: true
 
 platforms:
+  # No need to detail more: https://github.com/opscode/kitchen-vagrant#-default-configuration
 - name: ubuntu-12.04
+
   driver_config:
-    provider: vmware_fusion
-    box: precise64
-    #box: canonical-ubuntu-12.04
-    box_url: http://files.vagrantup.com/precise64_vmware.box
-    require_chef_omnibus: true
 #- name: ubuntu-10.04
 #  driver_config:
 #    box: opscode-ubuntu-10.04
